Resolving form field layout issues.

--- a/evado.uniform.webclient/css/client.main.css
+++ b/evado.uniform.webclient/css/client.main.css
@@ -6,7 +6,7 @@ body {
 
 body, h3, .Debug,.plot-container, .font-size10,.e-menu-bar a.btn, .e-menu-bar button.btn
 {
-  font-size: 12pt;
+  font-size: 10pt; /*font-size: 12pt;*/
 }
 #form-footer, .font-size8,#page-footer-section
 {
@@ -31,7 +31,7 @@ body, h3, .Debug,.plot-container, .font-size10,.e-menu-bar a.btn, .e-menu-bar bu
 
 .form-heading {
   color: Gray;
-  /*font-size: 14pt;*/
+  /*font-size: 12pt;*/
   padding-bottom: 4px;
   border-color: #ddd;
   border-style: solid;
@@ -95,7 +95,7 @@ body, h3, .Debug,.plot-container, .font-size10,.e-menu-bar a.btn, .e-menu-bar bu
 }
 
 h1 {
-  font-size: 16pt;
+  font-size: 12pt;
   font-weight: bold;
   padding: 0px;
   margin-top: 10px;
@@ -103,7 +103,7 @@ h1 {
 }
 
 h2 {
-  font-size: 14pt;
+  font-size: 11pt;
   font-weight: bold;
   padding: 0px;
   margin-top: 5px;
@@ -146,7 +146,7 @@ sup, .SuperScript {
 }
 
 .hero-unit h1 {
-  font-size: 16pt;
+  font-size: 14pt;
   line-height: 1;
   letter-spacing: -1px;
 }
@@ -231,7 +231,7 @@ input, select, textarea {
 }
 
 .headingCaps {
-  /*font-size: 14pt;*/
+  /*font-size: 12pt;*/
   font-weight: bold;
   text-transform: uppercase;
   text-align: center;
@@ -273,7 +273,7 @@ input, select, textarea {
 
 .field-group .table {
   padding: 0;
-  /*font-size: 14pt;*/
+  /*font-size: 12pt;*/
   text-align: left;
   padding-top: 15px;
   border-color: silver;
@@ -390,7 +390,7 @@ span.required {
 
 .field-group {
   box-sizing: border-box;
-  /*font-size: 14pt;*/
+  /*font-size: 12pt;*/
   float: left;
   margin-left: 15px;
   margin-right: 15px;
@@ -404,7 +404,7 @@ span.required {
   border-color: silver;
   border-style: solid;
   border-width: thin;
-  /*font-size: 14pt;*/
+  /*font-size: 12pt;*/
 }
 
 .field-group .fields .group-row.field:first-child {
@@ -561,7 +561,7 @@ span.required {
 }
 
 .field-group .group-title {
-  /*font-size: 14pt;*/
+  /*font-size: 12pt;*/
   padding-top: 3px;
   padding-bottom: 3px;
   font-weight: bol;
@@ -569,11 +569,11 @@ span.required {
 }
 
 .field-group .cell.title {
-  /*font-size: 14pt;*/
+  /*font-size: 12pt;*/
 }
 
 .field-group.large .cell.title {
-  /*font-size: 14pt;*/
+  /*font-size: 12pt;*/
 }
 
 img.camera {
@@ -757,7 +757,7 @@ img.camera {
 .panel-heading {
     color: white;
     text-align: center;
-    /*font-size: 14pt;*/
+    /*font-size: 12pt;*/
 padding-top: 8px;
 padding-bottom: 8px;
 border-top-left-radius: 5px;
@@ -774,7 +774,7 @@ background-color: #555;
 
 .e-menu-bar {
   padding-bottom: 0px;
-  /*font-size: 14pt;*/ /* 10pr;  */
+  /*font-size: 12pt;*/ /* 10pr;  */
 }
 
   .e-menu-bar .breadcrumb {
@@ -860,7 +860,7 @@ background-color: #555;
   #form-header-buttons-section .header {
     color: Gray;
     text-align: center;
-    /*font-size: 14pt;*/
+    /*font-size: 12pt;*/
     padding-top: 7px;
     padding-bottom: 7px;
   }
@@ -900,7 +900,7 @@ background-color: #555;
   padding-bottom: -20px;
 }
 
-.menu { /*font-size: 14pt;*/
+.menu { /*font-size: 12pt;*/
 }
 
   .menu.links {
@@ -1079,7 +1079,7 @@ label .bold {
   vertical-align: middle;
   /*height: 20pt;*/
   width: 100%;
-  /*font-size: 14pt;*/
+  /*font-size: 12pt;*/
 }
 
   .NavigationTable tr td {
